@@ -114,7 +114,7 @@ class redis_store(base_store):
         return self.redis.delete(_resultname(name))
 
 
-    def cleanup(self, active):
+    def cleanup(self, active, keeplocks=False):
         '''
         cleanup()
 
@@ -126,6 +126,13 @@ class redis_store(base_store):
                 existing.remove(_resultname(act.hash()))
             except ValueError:
                 pass
+
+        if keeplocks:
+            for lock in self.listlocks():
+                try:
+                    existing.remove(_lockname(lock))
+                except ValueError:
+                    pass
 
         cleaned = len(existing)
         for superflous in existing:
